corrected issue with images overflowing container on archive page

--- a/src/components/ImageCard/ImageCard.css
+++ b/src/components/ImageCard/ImageCard.css
@@ -1,4 +1,6 @@
-.card-img-container {
+.card-container {
+	display: flex;
+	flex-direction: column;
 	width: 20%;
 }
 
